[gd_scene load_steps=6 format=3 uid="uid://byd6y51qrt7b4"]

[ext_resource type="Script" uid="uid://byec4332v6o00" path="res://Customer/lives.gd" id="1_1q20c"]
[ext_resource type="Texture2D" uid="uid://dlcoeagp0e7yi" path="res://Customer/Star.png" id="1_x27s1"]

[sub_resource type="Animation" id="Animation_fh7w7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Star1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1q20c"]
resource_name = "star"
length = 2.60002
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Star1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.566667, 0.733333, 0.966667, 1.13333, 1.36667, 1.56667, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Star2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.566667, 0.733333, 0.966667, 1.13333, 1.36667, 1.56667, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Star3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.566667, 0.733333, 0.966667, 1.13333, 1.36667, 1.56667, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Star4:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.566667, 0.733333, 0.966667, 1.13333, 1.36667, 1.56667, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Star5:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.566667, 0.733333, 0.966667, 1.13333, 1.36667, 1.56667, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41jmx"]
_data = {
&"RESET": SubResource("Animation_fh7w7"),
&"star": SubResource("Animation_1q20c")
}

[node name="Lives" type="Node"]
script = ExtResource("1_1q20c")

[node name="Star1" type="Sprite2D" parent="."]
position = Vector2(1051.75, 24)
scale = Vector2(2.29667, 2.29667)
texture = ExtResource("1_x27s1")
hframes = 13

[node name="Star5" type="Sprite2D" parent="."]
position = Vector2(1253, 24.2533)
scale = Vector2(2.29667, 2.29667)
texture = ExtResource("1_x27s1")
hframes = 13

[node name="Star4" type="Sprite2D" parent="."]
position = Vector2(1201, 24.2533)
scale = Vector2(2.29667, 2.29667)
texture = ExtResource("1_x27s1")
hframes = 13

[node name="Star3" type="Sprite2D" parent="."]
position = Vector2(1150.49, 23.7467)
scale = Vector2(2.29667, 2.29667)
texture = ExtResource("1_x27s1")
hframes = 13

[node name="Star2" type="Sprite2D" parent="."]
position = Vector2(1100.75, 24)
scale = Vector2(2.29667, 2.29667)
texture = ExtResource("1_x27s1")
hframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_41jmx")
}
autoplay = "star"
